# Orryx-Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gui/: ChessBoardWidget.cpp  ChessBoardWidget.hpp  MainWindow.cpp  MainWindow.hpp  main_qt.cpp  resources.qrc
include/: AIPlayer.hpp  Board.hpp
scripts/: build_linux.sh  build_mac.sh  svg_to_png.sh
src/: AIPlayer.cpp
